--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ concurrency:
   group: ${{ github.ref }}/deploy
   cancel-in-progress: true
 env:
+  PEX_VERBOSE: 5
   DAGSTER_CLOUD_URL: "http://datanym.dagster.cloud"
   DAGSTER_CLOUD_API_TOKEN: ${{ secrets.DAGSTER_CLOUD_API_TOKEN }}
   ENABLE_FAST_DEPLOYS: 'true'
