--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 datanym/output_data/*
 dagster_home/*
 output_data/*
+credstash.log
+*.duckdb
+.ipynb_checkpoints
+*.ipynb
+.project
 
 
 # Byte-compiled / optimized / DLL files
